# powerline-taskwarrior

./: .dockerignore  .gitignore  .travis.yml  HACK.md  LICENSE  README.md  build_howto.md  pyproject.toml  renovate.json  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  test.yml
powerline_taskwarrior/: __init__.py  segments.py
test/: Dockerfile  test.sh
test/.config/powerline/colorschemes/: default.json
test/.config/powerline/themes/shell/: default.json
