[tool.poetry]
name = "powerline-taskwarrior"
version = "2.0.0"
description = "Powerline segments for showing information from the Taskwarrior task manager"
authors = ["German Lashevich <german.lashevich@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zebradil/powerline-taskwarrior"
repository = "https://github.com/zebradil/powerline-taskwarrior"
documentation = "https://github.com/Zebradil/powerline-taskwarrior/blob/master/README.md"
keywords = [
    "powerline",
    "taskwarrior",
    "powerline-segment",
    "taskwarrior-segment",
    "powerline-taskwarrior",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Terminals",
]

[tool.poetry.dependencies]
python = "^3.8"
powerline-status = "^2.7"

[tool.poetry.group.dev.dependencies]
black = ">=23,<25"
isort = "^5.10.1"
semgrep = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
